5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1679_1105.log
== TEST (2019-04-30 16:23:51) 
-- CODE:
brasao = input("Brasao: ")
print("Entrada: " brasao)

-- ERROR:
File "XXXX", line 2
    print("Entrada: " brasao)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:24:04) 
-- CODE:
brasao = input("Brasao: ")
print("Entrada: brasao")

-- OUTPUT:
Entrada: brasao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:24:48) 
-- CODE:
brasao = input("Brasao: ")
print("Entrada: brasao")

-- OUTPUT:
Entrada: brasao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:25:26) 
-- CODE:
br = input("Brasao: ")
print("Entrada: br")

-- OUTPUT:
Entrada: br
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:26:02) 
-- CODE:
var1 = input("Brasao: ")
print("Entrada: var1")

-- OUTPUT:
Entrada: var1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:26:27) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: var1")

-- OUTPUT:
Entrada: var1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:27:57) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: " var1)


-- ERROR:
File "XXXX", line 2
    print ("Entrada: " var1)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:05) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: ", var1)


-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:32) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: ", var1)


-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:30:53) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:31:04) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:31:11) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:39:02) 
-- CODE:
var1 = input("Brasao: ")
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
elif(var1 == "leao"):
	print("Casa : Lannister")
elif(var1 == "veado"):
	print("Casa: Baratheon")
elif(var1 == "dragao"):
	print("Casa: Targaryen")
elif(var1 == "rosa"):
	print("Casa: Tyrell")
elif(var1 == "sol"):
	print("Casa: Martell")
elif(var1 == "lula"):
	print("Casa: Greyjoy")
elif(var1 == "esfolado"):
	print("Casa: Bolton")
elif(var1 == "turta"):
	print("Casa: Tully")
	
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:39:23) 
-- CODE:
var1 = input("Brasao: ").lower()
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
elif(var1 == "leao"):
	print("Casa : Lannister")
elif(var1 == "veado"):
	print("Casa: Baratheon")
elif(var1 == "dragao"):
	print("Casa: Targaryen")
elif(var1 == "rosa"):
	print("Casa: Tyrell")
elif(var1 == "sol"):
	print("Casa: Martell")
elif(var1 == "lula"):
	print("Casa: Greyjoy")
elif(var1 == "esfolado"):
	print("Casa: Bolton")
elif(var1 == "turta"):
	print("Casa: Tully")
	
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:39:29) 
-- CODE:
var1 = input("Brasao: ").lower()
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
elif(var1 == "leao"):
	print("Casa : Lannister")
elif(var1 == "veado"):
	print("Casa: Baratheon")
elif(var1 == "dragao"):
	print("Casa: Targaryen")
elif(var1 == "rosa"):
	print("Casa: Tyrell")
elif(var1 == "sol"):
	print("Casa: Martell")
elif(var1 == "lula"):
	print("Casa: Greyjoy")
elif(var1 == "esfolado"):
	print("Casa: Bolton")
elif(var1 == "turta"):
	print("Casa: Tully")
	
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.184217
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:40:05) 
-- CODE:
var1 = input("Brasao: ").lower()
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
elif(var1 == "leao"):
	print("Casa : Lannister")
elif(var1 == "veado"):
	print("Casa: Baratheon")
elif(var1 == "dragao"):
	print("Casa: Targaryen")
elif(var1 == "rosa"):
	print("Casa: Tyrell")
elif(var1 == "sol"):
	print("Casa: Martell")
elif(var1 == "lula"):
	print("Casa: Greyjoy")
elif(var1 == "esfolado"):
	print("Casa: Bolton")
elif(var1 == "turta"):
	print("Casa: Tully")
	
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:40:16) 
-- CODE:
var1 = input("Brasao: ").lower()
print ("Entrada: ", var1)

if(var1 == "lobo"):
	print("Casa: Stark")
elif(var1 == "leao"):
	print("Casa : Lannister")
elif(var1 == "veado"):
	print("Casa: Baratheon")
elif(var1 == "dragao"):
	print("Casa: Targaryen")
elif(var1 == "rosa"):
	print("Casa: Tyrell")
elif(var1 == "sol"):
	print("Casa: Martell")
elif(var1 == "lula"):
	print("Casa: Greyjoy")
elif(var1 == "esfolado"):
	print("Casa: Bolton")
elif(var1 == "turta"):
	print("Casa: Tully")
	
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.163803
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
